--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -9,18 +9,42 @@ body {
 
 /* Header */
 header {
-  background-color: #333;
+  background-color: #080808;
   color: #fff;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 15px;
+}
+.nav-category{
+  background-color: #585858;
+  border-radius: 5px; 
+}
+.navbar .row {
+  width: 100%;
 }
 
-.brand-logo {
+.navbar .nav-link {
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.navbar .nav-link:hover,
+.navbar .nav-link:focus {
+  color: #000000;
+}
+
+.navbar .dropdown-menu {
+  border: none;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.navbar-brand, .navbar-brand>span {
+  color: #ffffff;
   display: flex;
   align-items: center;
 }
@@ -109,36 +133,11 @@ header {
   align-items: center;
 }
 
-
 .user-actions a {
-  color: #fff;
+  color: #ffffff;
   font-size: 24px;
   margin-left: 10px;
 }
-
-.banner {
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content: center;
-}
-
-
-.banner a {
-  color: #333;
-  text-decoration: none;
-  margin: 0 10px;
-}
-
-.banner form {
-  display: inline-block;
-}
-
-.banner select {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
 
 /* Profile Icon */
 .profile-dropdown {
@@ -190,20 +189,60 @@ header {
 .profile-dropdown-menu a:hover {
  color: black;
 }
- 
 
-/* section */
-/* .container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    padding: 20px;
-} */
+.container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/* Breadcrumb styles */
+.breadcrumb {
+  background-color: #f8f9fa;
+  padding: 10px 15px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+.breadcrumb a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: ">";
+}
 
 
+/* Product details styles */
 .product-details {
-    flex-basis: content;
-    padding: 20px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+#product-name {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.product-category {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 15px;
+}
+
+.rating {
+  margin-bottom: 10px;
+}
+
+.rating i {
+  font-size: 16px;
+  color: black;
 }
 
 .reviews{
@@ -222,19 +261,11 @@ header {
   display: flex;
   justify-content: center;
 }
-.rating {
-    margin-bottom: 10px;
-    width: 40%;
-}
-
-.rating i {
-    font-size: 16px;
-    color: black;
-}
 
 .price {
-    font-weight: bold;
-    margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
 }
 
 .stock-alert {
@@ -253,7 +284,7 @@ header {
 .quantity-control {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   margin-bottom: 10px;
 }
 
@@ -262,6 +293,7 @@ header {
   height: 30px;
   background-color: #ccc;
   border: none;
+  padding: 5px 10px;
   cursor: pointer;
 }
 .quantity-btn:hover {
@@ -272,9 +304,9 @@ header {
 
 .quantity-control input {
   width: 50px;
-  height: 30px;
+  /* height: 30px; */
   text-align: center;
-  margin: 0 5px;
+  margin: 0 10px;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -282,7 +314,7 @@ input::-webkit-inner-spin-button {
   margin: 0; 
 }
 
-.btn-buy-now, .btn-add-to-cart {
+.btn-buy-now, .btn-add-to-cart, .btn-view-cart, .btn-view-wishlist, .btn-add-to-wishlist{
   padding: 8px 16px;
   border: 1px solid ;
   border-radius: 4px;
@@ -294,8 +326,20 @@ input::-webkit-inner-spin-button {
   background-color: black;
   color:white;
 }
+.btn-view-cart:hover{
+  background-color: black;
+  color:white;
+}
 
 .btn-buy-now:hover{
+  background-color: black;
+  color:white;
+}
+.btn-view-wishlist:hover{
+  background-color: black;
+  color:white;
+}
+.btn-add-to-wishlist:hover{
   background-color: black;
   color:white;
 }
@@ -321,12 +365,30 @@ h1, h2 {
     margin-bottom: 10px;
 }
 
+.final-price {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+
 
    /* Footer */
 .footer {
-  background-color: #333;
+  background-color: #343a40;
+    color: #fff;
+    padding: 40px 0;
+    margin-top: 40px;
+}
+
+.container-footer{
+  background-color: #343a40;
   color: #fff;
   padding: 20px;
+  padding-bottom: 0px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin-top: 20px;
 }
 
 .footer-heading {
