--- a/views/admin/offers/offersList.ejs
+++ b/views/admin/offers/offersList.ejs
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/assets/images/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
             SportZilon
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
