--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
     <div class="brand">
-      <img src="/images/test.jpg" alt="Brand Logo">
+      <img src="/test.jpg" alt="Brand Logo">
       <span class="brand-name">ShoeZone</span>
     </div>
   </header>
