--- a/views/users/changePassword.ejs
+++ b/views/users/changePassword.ejs
@@ -9,73 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/changePassword.css">
   </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="brand-logo">
-        <a class="navbar-brand" href="/">
-          <img src="/images/test.jpg" alt="Brand Logo" width="50" height="50" class="img-fluid d-inline-block align-text-top">
-          <span class="d-inline-block">ShoeZone</span>
-        </a>
-      </div>
-      <div class="search-bar">
-        <form action="/search" method="GET">
-          <div class="input-group">
-            <input type="text" name="query" class="form-control" placeholder="Search for products...">
-            <button type="submit" class="input-group-text search-btn">
-                <i class="fas fa-search"></i>
-            </button>
-        </div>
-        <div class="dropdown">
-          <button class="dropdown-toggle btn dropdown-toggle-split" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="dropdown-toggle-text">All categories</span>
-            <span class="visually-hidden">Toggle Dropdown</span>
-          </button>
-          <% if (categoryList) { %>
-            <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
-              <li><a class="dropdown-item" href="#" onclick="setCategory('all')">All</a></li>
-              <% categoryList.forEach(category => { %>
-                <li><a class="dropdown-item" href="#" onclick="setCategory('<%= category.categoryName %>')"><%= category.categoryName %></a></li>
-              <% }) %>
-            </ul>
-          <% } %>
-          <input type="hidden" name="category" id="selectedCategory" value="all">
-        </div>
-        </form>
-      </div>
-      
-      <div class="user-actions">
-        <div class="profile-dropdown">
-          <a class="profile-dropdown-toggle btn " href="#" role="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-user"></i>
-          </a>
-            <div class="profile-dropdown-menu" >
-              <a class="dropdown-item" href="/profile">Profile</a>
-              <a class="dropdown-item" href="/logout">Logout</a>
-            </div>
-        </div>
-        <a href="/cart">
-          <i class="fas fa-shopping-cart"></i>
-      </a>
-      <a href="/wishlist">
-        <i class="fas fa-heart"></i>
-    </a>
-    </div>
-    
-    </nav>
-    <div class="banner">
-      <div class="row pt-2 pb-2">
-        <div class="col">
-          <a href="/">HOME</a>
-        </div>
-        <% categoryList.forEach(category => { %>
-          <div class="col">
-            <a href="/<%= category.categoryName %>" class="category-link" id="category-<%= category.categoryName %>" onclick="setCategory('<%= category.categoryName %>')"><%= category.categoryName %></a>
-          </div>
-      <% }) %>
-      </div>
-    </div>
- 
-  </header>
+  <%- include('../includes/userHeader.ejs') %>
   <main class="main">
     <% if (user) { %>
     <aside class="sidebar">
@@ -87,8 +21,8 @@
             <li><a href="/profile">User Profile</a></li>
             <li><a href="/address">Address</a></li>
             <li><a href="/order-history">Order History</a></li>
-            <li><a href="/payment-methods">Payment Methods</a></li>
             <li><a href="/change-password">Change Password</a></li>
+            <li><a href="/wallet">Wallet</a></li>
           </ul>
         </div>
         <% } %>
