--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/images/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
         SportZilon
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -68,7 +68,7 @@
       <div class="container">
          <% if (order) { %>
         <div class="d-flex justify-content-between align-items-center py-3">
-          <h2 class="h5 mb-0"><a href="#" class="text-muted"></a> Order id: <%= order._id %></h2>
+          <h2 class="h5 mb-0"><a href="#" class="text-muted"></a> Order id: <%= order.uniqueOrderId%></h2>
         </div>
         <div class="row">
           <div class="col-lg-8">
@@ -120,9 +120,7 @@
                                 <button class="btn btn-primary btn-sm" type="submit">Ship</button>
                               </form>
                             <% } else if (item.status === "Cancelled") { %>
-                              <form onsubmit="updateOrderStatus(event, '<%= order._id %>', '<%= item.productId._id %>', 'Shipped'); return false;" style="display: inline;">
-                                <button class="btn btn-primary btn-sm" type="submit">Ship</button>
-                              </form>
+                              <p>CANCELLED</p>
                             <% } else if (item.status === "Shipped") { %>
                               <form onsubmit="updateOrderStatus(event, '<%= order._id %>', '<%= item.productId._id %>', 'Cancelled'); return false;" style="display: inline;">
                                 <button class="btn btn-danger btn-sm" type="submit">Cancel</button>
@@ -209,11 +207,9 @@
       });
 
       if (response.ok) {
-        // Update the status cell
         document.getElementById(`item-status-${productId}`).textContent = status;
-
-        // Update the action buttons
         document.getElementById(`action-buttons-${productId}`).innerHTML = getActionButtons(status, orderId, productId);
+        location.reload();
       } else {
         console.error('Failed to update order status');
       }
