--- a/views/admin/ordersList.ejs
+++ b/views/admin/ordersList.ejs
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/images/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="/test.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
         SportZilon
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,7 +76,7 @@
             <tbody>
               <% orders.forEach(order => { %>
                 <tr>
-                  <td><a href="/admin/orders/<%= order._id %>"><%= order._id %></a></td>
+                  <td><a href="/admin/orders/<%= order._id %>"><%= order.uniqueOrderId %></a></td>
                   <td><%= new Date(order.createdAt).toLocaleDateString() %></td>
                   <td><%= order.userId.name %></td>
                   <td><%= order.paymentMethod %></td>
