--- a/views/userSide/checkout.ejs
+++ b/views/userSide/checkout.ejs
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <div class="brand-logo">
         <a class="navbar-brand" href="/">
-          <img src="/images/test.jpg" alt="Brand Logo" width="50" height="50" class="img-fluid d-inline-block align-text-top">
+          <img src="/test.jpg" alt="Brand Logo" width="50" height="50" class="img-fluid d-inline-block align-text-top">
           <span class="d-inline-block">ShoeZone</span>
         </a>
       </div>
@@ -27,7 +27,6 @@
       </div>
     </nav>
   </header>
-
   <div class="container">
     <div class="checkout-form">
   
@@ -98,7 +97,7 @@
         </div>
         <div id="input-cod">
           <input type="radio" id="cod" name="payment_method">
-          <label for="cod">Cash on Delivery</label>
+          <label for="cod" id="cod-label">Cash on Delivery</label>
         </div>
       </div>
       
@@ -308,7 +307,6 @@
     const walletBalance = parseFloat(walletBalanceSpan.textContent.match(/₹([\d.]+)/)[1]);
     const walletPaymentErrorSpan = document.getElementById('wallet-payment-error');
 
-    console.log("hello world")
 
     let couponDiscount = 0;
     const orderTotalPriceElement = document.getElementById('order-total-price');
@@ -318,59 +316,6 @@
     const applyCouponBtn = document.getElementById('applyCouponBtn');
     const couponMessage = document.getElementById('couponMessage');
 
-//     function calculateTotals() {
-//       let totalCost = 0;
-//       let totalQuantity = 0;
-//       let basePrice = 0;
-
-//       productCards.forEach(card => {
-//           const quantityInput = card.querySelector('.quantity-input');
-//           const productPriceDiv = card.querySelector("#product-price");
-
-//           if (quantityInput && productPriceDiv) {
-//               const quantity = parseInt(quantityInput.value) || 0;
-//               const price = parseFloat(productPriceDiv.dataset.productPrice) || 0;
-
-//               totalQuantity += quantity;
-//               basePrice += quantity * price;
-//           }
-//       });
-
-//       const salesTax = basePrice * 0.08; // 8% sales tax
-//       const deliveryCharge = 40; // flat delivery charge of 40 rupees
-//       const subTotal = basePrice - (basePrice * couponDiscount);
-//       const discountAmount = basePrice * couponDiscount;
-//       const grandTotal = subTotal + salesTax + deliveryCharge;
-
-//       if (walletBalance < grandTotal) {
-//           walletPaymentRadio.disabled = true;
-//           walletPaymentErrorSpan.textContent = 'Insufficient Balance';
-//       } else {
-//           walletPaymentRadio.disabled = false;
-//           walletPaymentErrorSpan.textContent = '';
-//       }
-
-//       document.getElementById('base-price').textContent = `Base Price: ₹${basePrice.toFixed(2)}`;
-//       document.getElementById('sub-total').textContent = `Sub Total: ₹${subTotal.toFixed(2)}`;
-//       document.getElementById('sales-tax').textContent = `Sales Tax: ₹${salesTax.toFixed(2)}`;
-//       document.getElementById('delivery-charge').textContent = `Delivery Charge: ₹${deliveryCharge.toFixed(2)}`;
-//       orderTotalPriceElement.textContent = `Total Cost: ₹${grandTotal.toFixed(2)}`;
-//       totalQuantityElement.textContent = `Total Items: ${totalQuantity}`;
-//       if(discountAmount > 0){
-//         couponDiscountPriceElement.textContent = `Discount: -₹${discountAmount.toFixed(2)}`;
-//       }else{
-//         couponDiscountPriceElement.textContent = `Discount: ₹${discountAmount.toFixed(2)}`;
-//       }
-
-//     return {
-//         discountAmount,
-//         salesTax,
-//         deliveryCharge,
-//         subTotal,
-        
-//     };
-    
-// }
 
 function calculateTotals() {
   let totalCost = 0;
@@ -409,6 +354,7 @@ function calculateTotals() {
     walletPaymentErrorSpan.textContent = '';
   }
 
+  const codInput = document.getElementById('cod');
   document.getElementById('base-price').textContent = `Base Price: ₹${basePrice.toFixed(2)}`;
   document.getElementById('sub-total').textContent = `Sub Total: ₹${subTotal.toFixed(2)}`;
   document.getElementById('sales-tax').textContent = `Sales Tax: ₹${salesTax.toFixed(2)}`;
@@ -421,6 +367,13 @@ function calculateTotals() {
     couponDiscountPriceElement.textContent = `Coupon Discount: ₹${discountAmount.toFixed(2)}`;
   }
 
+  if(grandTotal > 1000){
+    codInput.disabled = true;
+    codInput.nextElementSibling.textContent = 'Cash on Delivery (not available for orders above ₹1000)'
+  }else{
+    codInput.disabled = false;
+    codInput.nextElementSibling.textContent = 'Cash on Delivery'
+  }
   // Add this line to display total savings
   // document.getElementById('total-savings').textContent = `Total Savings: ₹${totalSavings.toFixed(2)}`;
 
@@ -554,31 +507,6 @@ function calculateTotals() {
             calculateTotals();
         });
     });
-
-    // let couponCode;
-    // applyCouponBtn.addEventListener('click', () => {
-    //      couponCode = couponInput.value.trim().toUpperCase();
-
-    //     fetch(`/coupon-discount/${couponCode}`)
-    //         .then(response => response.json())
-    //         .then(data => {
-    //             if (data.success) {
-    //                 couponDiscount = data.discount / 100;
-    //                 couponMessage.textContent = 'Coupon applied successfully!';
-    //                 couponMessage.style.color = 'green';
-    //             } else {
-    //               console.log(data)
-    //                 couponDiscount = 0;
-    //                 couponMessage.textContent = `${data.error}`;
-    //                 couponMessage.style.color = 'red';
-    //             }
-    //             calculateTotals();
-    //         })
-    //         .catch(error => {
-    //             console.error(error);
-    //         });
-    //     couponInput.value = '';
-    // });
 
 let couponCode;
 const appliedCouponContainer = document.getElementById('appliedCouponContainer');
@@ -723,31 +651,37 @@ placeOrderBtn.addEventListener('click', async (e) => {
     } else if (data.online) {
       const options = {
         key:  "rzp_test_Tb5YYNqwWeIaYk" , 
-        amount: data.order.amount,
-        currency: data.order.currency,
+        amount: data.razorpayOrder.amount,
+        currency: data.razorpayOrder.currency,
         name: 'ShoeZone',
         description: 'Order Description',
-        order_id: data.order.id, // Razorpay Order ID
+        order_id: data.razorpayOrder.id, // Razorpay Order ID
         handler: async function (response) {
-          const orderData = {
-          paymentId: response.razorpay_payment_id,
-          orderId: response.razorpay_order_id,
-          signature: response.razorpay_signature,
-        };
-        const resp = await fetch('/handle-payment-success', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({orderData, orderItems, totalCost, couponCode, priceDetails, addressDetails})
-        });
-        const data = await resp.json();
-        if (data.success) {
-          console.log('Order placed successfully');
-          window.location.href = '/order-history';
-        } else {
-          console.error('Error updating order details:', data.error);
-        }
+        if (response.razorpay_payment_id) {
+          console.log(response,"order",data.razorpayOrder,"orderId:",data.orderId);
+          response.orderId = data.orderId;
+        // Payment Successful, send verification request and redirect on success
+            fetch('/checkout/verify', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify(response)
+            })
+            .then(response => response.json())
+            .then(data => {
+              if (data.message === 'Payment verified') {
+                window.location.href = `/order-details/${data.orderId}`; // Redirect to order history with successful order ID
+              } else {
+                console.error('Payment verification failed!');
+              }
+            })
+            .catch(error => {
+              console.error('Error verifying payment:', error);
+            });
+          } else {
+            window.location.href = `/order-details/${data.orderId}?payment=pending`;
+          }
         },
         prefill: {
           name: 'User Name',
@@ -761,19 +695,19 @@ placeOrderBtn.addEventListener('click', async (e) => {
 
       const razorpayCheckout = new window.Razorpay(options);
       razorpayCheckout.open();
+     
+      razorpayCheckout.on('payment.failed', async function (response) {
+        //data = await response.json();
+        console.error('Payment failed:', response.error,"data:",data);
+        window.location.href = `/order-details/${data.orderId}?payment=failed`;
 
-      
-      razorpayCheckout.on('payment.failed', function (response) {
-        
-        console.error('Payment failed:', response.error);
-        
       });
 
       razorpayCheckout.on('payment.dismissed', function (response) {
-        
         console.log('Payment dismissed:', response);
-       
+        window.location.href = `/order-details/${data.orderId}?payment=failed`;
       });
+
     } else {
       Swal.fire({
         icon: 'error',
